03-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  name: sports
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: sports
